tests/baselines/reference/unusedTypeDeclarations.errors.txt
unusedTypeDeclarations.ts(1,6): error TS6196: 'T1' is declared but never used.


==== unusedTypeDeclarations.ts (1 errors) ====
    type T1 = number;  // error
         ~~
!!! error TS6196: 'T1' is declared but never used.
    type _T2 = number; // ok
    
    export {};
    